# ephemeral-namespace-operator

./: .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Jenkinsfile  LICENSE  Makefile  PROJECT  README.md  build_deploy.sh  buildspec.yml  coverage.html  deploy.yml  design.puml  go.mod  go.sum  main.go  manifest-dev.yaml  manifest.yaml  manifest2template.py  pr_check.sh  readme.adoc  renovate.json  res.yaml  template.yml  test-pool-spec.yaml
.github/: dependabot.yml
.github/workflows/: imageupdate.yml  lint.yml  package.yml  platsec.yml  pr-e2e-codebuild.yml  test.yml
.tekton/: ephemeral-namespace-operator-op55-pull-request.yaml  ephemeral-namespace-operator-op55-push.yaml  ephemeral-namespace-operator-pull-request.yaml  ephemeral-namespace-operator-push.yaml  rh-eno-ci-pull-request.yaml  rh-eno-ci-push.yaml
api/v1alpha1/: groupversion_info.go  namespacereservation_types.go  zz_generated.deepcopy.go
ci/: helpers.sh  unit_tests.sh
config/: dev_config.json  ephemeral_config.json  local_config.json
config/manager/: manager.yaml  (+3 more)
controllers/: config.go  namespacereservation_controller.go  namespacereservation_controller_suite_test.go  pool.go  suite_test.go
dashboards/: ephemeral-ns-operator-dashboard.yaml
pipelines/: unit-test.yaml
tests/rh_eno_ci/: Dockerfile  pyproject.toml
tests/rh_eno_ci/deployment/: job.yaml
tests/rh_eno_ci/rh_eno_ci/tests/: conftest.py  test_pool_provisioning.py  test_pool_status.py  test_pool_without_clowdenv.py  test_reservation_lifecycle.py  test_secret_copying.py
(+150 files in other folders)
