[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rh-eno-ci"
version = "0.1.0"
description = "Ephemeral Namespace Operator E2E test suite"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
    "ocviapy",
    "wait_for",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "ruff",
]

[tool.setuptools]
packages = ["rh_eno_ci", "rh_eno_ci.tests", "rh_eno_ci.resources"]

[tool.setuptools.package-data]
"rh_eno_ci.resources" = ["*.yaml"]

[tool.ruff]
include = ["rh_eno_ci/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
